# checkcbox-parson

./: .gitignore  CMakeLists.txt  Makefile  MovingToWASM  NotWorkingparson.wasm.ll  Workingparson.wasm.ll  parson.c  parson.h  parson.tainted.c  parson.tainted.h  parson.wasm.c  parson.wasm.h  parson.wasm.ll  parson_tainted.h  tests.c  tests.ll  tests.s  tests.tainted.c
SemiAutomaticallyGeneratedWASMFiles/: Taintedparson.c  Taintedparson.h  Taintedparson.wasm  Taintedparson_wasm.c  Taintedparson_wasm.h
TaintedParsonCorrected/: .Taintedparson.c.swp  Taintedparson.c  Taintedparson.h
TaintedWasmReadableDefinitions/: Tainted_wasm.c  Tainted_wasm.h
static_libraries/: a.out
tainted/: Tainted__sigset_t.c  Tainted__sigset_t.h  Taintedbyteswap.c  Taintedbyteswap.h  Taintedparson.c  Taintedparson.h  Taintedpthreadtypes-arch.c  Taintedpthreadtypes-arch.h  Taintedselect.c  Taintedselect.h  Taintedstddef.c  Taintedstddef.h  Taintedstdint.c  Taintedstdint.h  Taintedstdio.c  Taintedstdio.h  WASM2Cparson.h
tests/: .test_2.txt.swp  .test_5.txt.swp  test_1_1.txt
wallet/: parson.tainted.c
wasm_readable_definitions/: Taintedparson_wasm.c  Taintedparson_wasm.h
